image converti en .webp correction contraste sur texte

--- a/style.css
+++ b/style.css
@@ -777,7 +777,7 @@ h4 {
 }
 
 .tc-white {
-    color: #f0b295!important;
+    color: #F3976C!important;
 }
 
 .btn-atomic-tangerine {
